# avis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
apps/: CMakeLists.txt
apps/database/: CMakeLists.txt  adb.cpp
apps/visualizer/: CMakeLists.txt  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  visualizer.cpp  visualizer.h
assets/cso/: cs_compute11.cso  cs_draw_point_cloud.cso
assets/shaders/: cs_draw_point_cloud.hlsl  ps_geometry.hlsl  ps_lighting.hlsl  triangle_ps.hlsl  triangle_vs.hlsl  vs_fullscreen_quad.hlsl
cmake/: ShaderSupport.cmake
include/avis/core/: assertions.h  com_ptr.h  common.h  dynamic_bitset.h  enum_flags.h  exceptions.h  hash_combine.h  helper_functions.h  string_functions.h  unique_handle.h
include/avis/core/configuration/: build_configuration.h  preprocessor.h
include/avis/core/configuration/compiler/: msvc.h
include/avis/core/configuration/platform/: windows.h
include/avis/core/streams/: binary_stream.h  memory_stream.h  text_stream.h
include/avis/core/text/json/: json_parser.h  json_tokenizer.h
include/avis/middleware/: basic_app.h  configuration.h  runtime.h  singleton.h  step_timer.h  visual_app.h  window.h
include/avis/middleware/configuration/: configuration_ast.h  configuration_parser.h  configuration_visitor.h  ini_parser.h
include/avis/middleware/data_formats/json/: json_parser.h  json_tokenizer.h
include/avis/middleware/data_formats/ply/: ply_parser.h
include/avis/middleware/geometry/: data_layout.h  data_store.h
include/avis/middleware/input/: input_collector.h  input_constants.h  input_context.h  input_decoder.h  input_device.h  input_device_controller_dualsense.h  input_device_keyboard.h  input_device_mouse.h  input_dispatcher.h  input_state.h
include/avis/middleware/input/details/: input_type_id.h  input_wrapper.h
include/avis/middleware/platform/: basic_window.h  basic_window_messages.h
include/avis/middleware/scene/: scene_graph.h
include/avis/runtime/: io_system.h
include/avis/runtime/data/: data_provider.h  field.h  field_extensions.h  page_controller.h  page_view.h  point_cloud.h  serializer.h  spatial_index.h
include/avis/runtime/graphics/: command_context.h  command_queue.h  descriptors.h  enum_mappings.h  graphics_device.h  graphics_system.h  pipeline_state.h  render_pass.h  render_pass_builder.h  render_pipeline.h  resource.h  resource_graph.h  root_descriptor.h  root_signature.h  shaders.h
include/avis/runtime/io/: file_descriptor.h  io_context.h  io_read_request.h  io_request.h  io_service.h  io_write_request.h  operation_context.h
include/avis/runtime/parallel/: thread_pool.h
lib/: CMakeLists.txt
lib/avis/core/streams/: memory_stream.cpp
lib/avis/middleware/: configuration.cpp  runtime.cpp  step_timer.cpp
lib/avis/middleware/configuration/: ini_parser.cpp
lib/avis/middleware/data_formats/ply/: ply_parser.cpp
lib/avis/middleware/geometry/: data_layout.cpp  data_store.cpp
lib/avis/middleware/input/: input_device_controller_dualsense.cpp  input_device_keyboard.cpp
lib/avis/middleware/platform/: basic_window_messages.cpp
lib/avis/runtime/data/: data_provider.cpp  point_cloud.cpp
lib/avis/runtime/io/: io_context.cpp  io_service.cpp
lib/core/: unique_handle.cpp
lib/core/streams/: binary_stream.cpp  text_stream.cpp
lib/core/text/json/: json_parser.cpp  json_tokenizer.cpp
lib/middleware/: basic_app.cpp  configuration.cpp  step_timer.cpp  visual_app.cpp  window.cpp
lib/middleware/configuration/: configuration_parser.cpp
lib/middleware/data_formats/json/: json_parser.cpp  json_tokenizer.cpp
lib/middleware/data_formats/ply/: ply_parser.cpp
lib/middleware/geometry/: data_layout.cpp  data_store.cpp
lib/middleware/input/: input_context.cpp  input_device_controller_dualsense.cpp  input_device_keyboard.cpp  input_device_mouse.cpp  input_dispatcher.cpp
lib/middleware/input/details/: input_wrapper.cpp
lib/middleware/platform/: basic_window.cpp
lib/middleware/scene/: scene_graph.cpp
lib/runtime/data/: page_controller.cpp  page_view.cpp
lib/runtime/graphics/: command_context.cpp  command_queue.cpp  descriptors.cpp  graphics_device.cpp  graphics_system.cpp  pipeline_state.cpp  render_pass.cpp  render_pass_builder.cpp  render_pipeline.cpp  resource.cpp  resource_graph.cpp  root_descriptor.cpp  root_signature.cpp  shaders.cpp
lib/runtime/io/: file_descriptor.cpp  io_request.cpp  operation_context.cpp
lib/runtime/parallel/: thread_pool.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tools/visualizer/: CMakeLists.txt  visualizer.cpp
